# codehawk

./: .gitignore  LICENSE  README.md
CodeHawk/: .gitignore  README.md  Shakefile.hs  StyleGuide.md  codehawk.opam  dune-project  full_clean.sh  full_make.sh  full_make_no_gui.sh  make_binary_analyzer.sh  make_c_analyzer.sh  make_java_analyzer.sh  non_file_modules.txt
CodeHawk/CH/chifparser/: Makefile  chifparser.ml  lexer.mll  main.ml  parseError.ml  parser.mly
CodeHawk/CH/chlib/: Makefile  cHAtlas.ml  cHAtlas.mli  cHAtlasTable.ml  cHAtlasTable.mli  cHBitstring.ml  cHBitstring.mli  cHBooleanConstantsDomainNoArrays.ml  cHBooleanConstantsDomainNoArrays.mli  cHBounds.ml  cHBounds.mli  cHChernikova.ml  cHChernikova.mli  cHCollections.ml  cHCollections.mli  cHCommon.ml  cHCommon.mli  cHCommunications.ml  cHCommunications.mli  cHConstantPropagationNoArrays.ml  cHConstantPropagationNoArrays.mli  cHConstants.ml  cHConstants.mli  cHDomain.ml  cHDomain.mli  cHDomainObserver.ml  cHDomainObserver.mli  cHExternalValues.ml  cHExternalValues.mli  cHGaussSeidelSigmaCombinator.ml  cHGaussSeidelSigmaCombinator.mli  cHIndexedHTable.ml  cHIndexedHTable.mli  cHInternalization.ml  cHInternalization.mli  cHIntervals.ml  cHIntervals.mli  cHIntervalsDomainExtensiveArrays.ml  cHIntervalsDomainExtensiveArrays.mli  cHIntervalsDomainNoArrays.ml  (+100 more)
CodeHawk/CH/chutil/: Makefile  cHAnalysisSetup.ml  cHAnalysisSetup.mli  cHCHIFXml.ml  cHCHIFXml.mli  cHDot.ml  cHDot.mli  cHFileIO.ml  cHFileIO.mli  cHFormatStringParser.ml  cHFormatStringParser.mli  cHGc.ml  cHGc.mli  cHIndexTable.ml  cHIndexTable.mli  cHInvAccess.ml  cHInvAccess.mli  cHInvStore.ml  cHInvStore.mli  cHLogger.ml  cHLogger.mli  cHLoopStructure.ml  cHLoopStructure.mli  cHMaps.ml  cHMaps.mli  cHMemoryRecorder.ml  cHMemoryRecorder.mli  cHNestedCommands.ml  cHNestedCommands.mli  cHNumConstraintPrinter.ml  cHNumConstraintPrinter.mli  cHNumRecordTable.ml  cHNumRecordTable.mli  cHPrettyUtil.ml  cHPrettyUtil.mli  cHReportUtil.ml  cHReportUtil.mli  cHStats.ml  cHStats.mli  cHStringIndexTable.ml  (+16 more)
CodeHawk/CH/xprlib/: Makefile  dune  xSumTypeSerializer.ml  xSumTypeSerializer.mli  xconsequence.ml  xconsequence.mli  xprDictionary.ml  xprDictionary.mli  xprToPretty.ml  xprToPretty.mli  xprTypes.ml  xprTypes.mli  xprUtil.ml  xprUtil.mli  xprXml.ml  xprXml.mli  xprt.ml  xprt.mli  xrewrite.ml  xrewrite.mli  xsimplify.ml  xsimplify.mli
CodeHawk/CHB/: bch_clean.sh  bch_make.sh
CodeHawk/CHB/bchanalyze/: Makefile  bCHAnalysisTypes.ml  bCHAnalysisTypes.mli  bCHAnalyzeApp.ml  bCHAnalyzeApp.mli  bCHAnalyzeProcedure.ml  bCHAnalyzeProcedure.mli  bCHDefUse.ml  bCHDefUse.mli  bCHDefUseHigh.ml  bCHDefUseHigh.mli  bCHDesignation.ml  bCHDesignation.mli  bCHExtractInvariants.ml  bCHExtractInvariants.mli  bCHFileIO.ml  bCHFileIO.mli  bCHInterrupt.ml  bCHInterrupt.mli  bCHNumericalConstraints.ml  bCHNumericalConstraints.mli  bCHReachingDefs.ml  bCHReachingDefs.mli  bCHSaveExports.ml  bCHSaveExports.mli  bCHTrace.ml  bCHTrace.mli  bCHTypeConstantsDomainNoArrays.ml  bCHTypeConstantsDomainNoArrays.mli  dune
CodeHawk/CHB/bchcil/: Makefile  bCHBCDictionary.ml  bCHBCDictionary.mli  bCHBCFiles.ml  bCHBCFiles.mli  bCHBCFunDeclarations.ml  bCHBCFunDeclarations.mli  bCHBCSumTypeSerializer.ml  bCHBCSumTypeSerializer.mli  bCHBCUtil.ml  bCHBCUtil.mli  bCHBCWriteXml.ml  bCHBCWriteXml.mli  bCHCBasicTypes.ml  bCHCBasicTypes.mli  bCHCTypeUtil.ml  bCHCTypeUtil.mli  bCHCilToCBasic.ml  bCHCilToCBasic.mli  bCHCilTypes.ml  bCHCilTypes.mli  bCHParseCilFile.ml  bCHParseCilFile.mli  bCHXParseFile.ml  bCHXParseFile.mli  dune
CodeHawk/CHB/bchcmdline/: Makefile  bCHVersion.ml  bCHVersion.mli  bCHXBinaryAnalyzer.ml  bCHXInspectSummaries.ml  bCHXMakeAppSummary.ml  bCHXMakeClassSummary.ml  bCHXMakeConstSummary.ml  bCHXMakeLibSummary.ml  bCHXMakeStructDefinition.ml  bCHXSaveExports.ml  dune
CodeHawk/CHB/bchgui/: Makefile  bCHCanvasCallgraph.ml  bCHCanvasCallgraph.mli  bCHCanvasItems.ml  bCHCanvasItems.mli  bCHCanvasUtil.ml  bCHCanvasUtil.mli  bCHControlFlowGraph.ml  bCHControlFlowGraph.mli  bCHDllFunctionsDisplay.ml  bCHDllFunctionsDisplay.mli  bCHFunctionsDisplay.ml  bCHFunctionsDisplay.mli  bCHGui.ml  bCHGui.mli  bCHGuiUtil.ml  bCHGuiUtil.mli  bCHOrphanCode.ml  bCHOrphanCode.mli  bCHStackFrame.ml  bCHStackFrame.mli  bCHStateDialogs.ml  bCHStateDialogs.mli  bCHSystemDisplay.ml  bCHSystemDisplay.mli  bch_maingui.ml
CodeHawk/CHB/bchlib/: Makefile  bCHARMFunctionInterface.ml  bCHARMFunctionInterface.mli  bCHApiParameter.ml  bCHApiParameter.mli  bCHAttributesFunctionSemantics.ml  bCHAttributesFunctionSemantics.mli  bCHBCAttributes.ml  bCHBCAttributes.mli  bCHBCAttributesUtil.ml  bCHBCAttributesUtil.mli  bCHBCDictionary.ml  bCHBCDictionary.mli  bCHBCFiles.ml  bCHBCFiles.mli  bCHBCFunDeclarations.ml  bCHBCFunDeclarations.mli  bCHBCSumTypeSerializer.ml  bCHBCSumTypeSerializer.mli  bCHBCTypePretty.ml  bCHBCTypePretty.mli  bCHBCTypeTransformer.ml  bCHBCTypeTransformer.mli  bCHBCTypeUtil.ml  bCHBCTypeUtil.mli  bCHBCTypeXml.ml  bCHBCTypeXml.mli  bCHBCTypes.ml  bCHBCTypes.mli  bCHBCUtil.ml  bCHBCUtil.mli  bCHBCWriteXml.ml  bCHBCWriteXml.mli  bCHBTerm.ml  bCHBTerm.mli  bCHBasicTypes.ml  bCHBasicTypes.mli  bCHByteUtilities.ml  bCHByteUtilities.mli  bCHCPURegisters.ml  (+174 more)
CodeHawk/CHB/bchlibarm32/: Makefile  bCHARMAnalysisResults.ml  bCHARMAnalysisResults.mli  bCHARMAssemblyBlock.ml  bCHARMAssemblyBlock.mli  bCHARMAssemblyFunction.ml  bCHARMAssemblyFunction.mli  bCHARMAssemblyFunctions.ml  bCHARMAssemblyFunctions.mli  bCHARMAssemblyInstruction.ml  bCHARMAssemblyInstruction.mli  bCHARMAssemblyInstructions.ml  bCHARMAssemblyInstructions.mli  bCHARMCHIFSystem.ml  bCHARMCHIFSystem.mli  bCHARMCallSitesRecords.ml  bCHARMCallSitesRecords.mli  bCHARMCodePC.ml  bCHARMCodePC.mli  bCHARMConditionalExpr.ml  bCHARMConditionalExpr.mli  bCHARMConditionalJumpExpr.ml  bCHARMConditionalJumpExpr.mli  (+45 more)
CodeHawk/CHC/: cch_clean.sh  cch_make.sh
CodeHawk/CHJ/: NamingConventions.md
CodeHawk/CHT/: .gitignore  tch_clean.sh  tch_make.sh  tch_run.sh
CodeHawk/CH_gui/: Makefile  cHCanvas.ml  cHCanvas.mli  cHCanvasBase.ml  cHCanvasBase.mli
(+7373 files in other folders)
