(executable
  (name bCHXBinaryAnalyzer)
  (libraries bchanalyze bchcil bchlib bchlibarm32 bchlibelf bchlibmips32 bchlibpe bchlibpower32 bchlibx86 chlib chutil extlib unix)
  (modules bCHXBinaryAnalyzer)
  (package exes)
  (public_name chx86_analyze))

(executable
  (name bCHXInspectSummaries)
  (libraries bchlib chlib chutil)
  (modules bCHXInspectSummaries)
  (package exes)
  (public_name chx86_inspect_summaries))

(executable
  (name bCHXSaveExports)
  (libraries bchlib bchlibpe bchlibx86 chlib chutil unix)
  (modules bCHXSaveExports)
  (package exes)
  (public_name chx86_save_exports))

(executable
  (name bCHXMakeLibSummary)
  (libraries bchlib chlib chutil unix)
  (modules bCHXMakeLibSummary)
  (package exes)
  (public_name chx86_make_lib_summary))

(executable
  (name bCHXMakeAppSummary)
  (libraries bchlib chlib chutil unix)
  (modules bCHXMakeAppSummary)
  (package exes)
  (public_name chx86_make_app_summary))

(executable
  (name bCHXMakeConstSummary)
  (libraries chlib chutil unix)
  (modules bCHXMakeConstSummary)
  (package exes)
  (public_name chx86_make_const_summary))

(executable
  (name bCHXMakeStructDefinition)
  (libraries chlib chutil unix)
  (modules bCHXMakeStructDefinition)
  (package exes)
  (public_name chx86_make_structdef))
