(library
  (name cchcil)
  (libraries chlib chutil extlib goblint-cil zarith)
  (modules :standard \ cCHXParseFile)
  (public_name codehawk.cchcil)
  (wrapped false))

(executable
  (name cCHXParseFile)
  (libraries cchcil chlib chutil extlib goblint-cil zarith)
  (modules cCHXParseFile)
  (package exes)
  (public_name parseFile))

(env
  (dev
    (flags (:standard -warn-error -A -w @33))))
