(tests
  (names
	bCHDoublewordTest
	bCHImmediateTest
	bCHLocationTest
	bCHStreamWrapperTest
	bCHXprUtilTest
	bCHMemoryReferenceTest
	bCHFunctionInterfaceTest
	bCHARMFunctionInterfaceTest
	bCHTypeConstraintStoreTest
	bCHFlocTest)
  (deps header.i decompose_array_address.i)
  (libraries bchcil bchlib xprlib chlib chutil tbchlib tchlib txprlib))
