(tests 
  (names
    bCHARMDictionaryTest
    bCHDisassembleARMInstructionTest
    bCHDisassembleThumbInstructionTest
    bCHThumbITSequenceTest
    bCHARMJumptableTest
    bCHARMConditionalExprTest
    bCHTranslateARMToCHIFTest
    bCHARMAssemblyFunctionTest
    bCHFnARMDictionaryTest)
  (libraries bchanalyze bchcil bchlibarm32 chlib chutil extlib tbchlib tbchlibarm32 tchlib txprlib xprlib zarith))
